--- a/style.css
+++ b/style.css
@@ -1,53 +1,90 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Lobster&family=Poppins:wght@500&family=Roboto:wght@500&display=swap');
 
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-body{
+body {
   background-color: #F3F1FF;
   font-family: 'Poppins', sans-serif;
 }
 
-.container{
+.container {
   display: flex;
   justify-content: center;
 }
 
-/* top section style  */
+/* top section player style  */
 
-.top{
+.top {
   width: 870px;
   height: 670px;
   background-color: white;
   padding: 30px;
 }
 
-.top-players{
+.top-players {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   row-gap: 30px;
 }
 
-.top-player{
+.top-player {
   display: flex;
   align-items: center;
   gap: 16px;
 }
 
-.top-player img{
+.top-player img {
   width: 56px;
   height: 56px;
 }
 
-.top-text{
+.top-text {
   margin-bottom: 30px;
   color: #562EFF;
 }
 
-.hr{
+.hr {
   border: 1px solid #D1D1D1;
   margin: 30px 0;
+}
+
+/* top section blog styles */
+
+.top-blog{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  row-gap: 16px;
+}
+
+article {
+  display: flex;
+}
+
+.blog-img img{
+  width: 177px;
+  height: 117px;
+}
+
+.blog-text{
+  margin-left: 16px;
+}
+
+.blog-text h3{
+  font-size: 20px;
+  line-height: 34px;
+  margin-bottom: 6px;
+}
+
+.blog-text p{
+  color: #9F9F9F;
+  font-size: 16px;
+}
+
+.blog-text a{
+  text-decoration: none;
+
 }
