--- a/style.css
+++ b/style.css
@@ -16,7 +16,53 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
- 
+
+}
+
+/* nav bar style  */
+nav {
+  background: #562EFF;
+  height: 90px;
+  width: 100%;
+  margin-bottom: 40px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+
+.idea {
+  display: flex;
+  align-items: center;
+}
+
+.idea a {
+  margin-left: 15px;
+  text-decoration: none;
+  color: white;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+.idea img {
+  width: 40.42px;
+  height: 51px;
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+}
+
+.navigation a{
+  text-decoration: none;
+  color: white;
+  margin: 0 36px;
+}
+
+.navigation a:hover{
+  color: lightgreen;
 }
 
 /* top section player style  */
@@ -58,9 +104,9 @@ body {
 
 /* top section blog styles */
 
-.top-blog{
+.top-blog {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   row-gap: 16px;
 }
 
@@ -68,33 +114,33 @@ article {
   display: flex;
 }
 
-.blog-img img{
+.blog-img img {
   width: 177px;
   height: 117px;
 }
 
-.blog-text{
+.blog-text {
   margin-left: 16px;
 }
 
-.blog-text h3{
+.blog-text h3 {
   font-size: 20px;
   line-height: 34px;
   margin-bottom: 6px;
 }
 
-.blog-text p{
+.blog-text p {
   color: #9F9F9F;
   font-size: 16px;
 }
 
-.blog-text a{
+.blog-text a {
   text-decoration: none;
 }
 
 /* bottom section */
 
-.bottom{
+.bottom {
   margin-top: 26px;
   margin-bottom: 28px;
   width: 870px;
@@ -104,17 +150,17 @@ article {
   border-radius: 5px;
 }
 
-.bottom-title{
+.bottom-title {
   margin-bottom: 8px;
 }
 
-.course-cards{
+.course-cards {
   display: grid;
-  grid-template-columns: repeat(3,1fr);
+  grid-template-columns: repeat(3, 1fr);
 }
 
 
-.course-card{
+.course-card {
   width: 252px;
   height: 270px;
   padding: 13px 19px 13px 0;
@@ -122,36 +168,36 @@ article {
   filter: drop-shadow(0px 5.34229px 13.3557px rgba(0, 0, 0, 0.101));
 }
 
-.course-img img{
+.course-img img {
   width: 224px;
-height: 104px;
+  height: 104px;
 }
 
-.course-author{
+.course-author {
   color: #ED6B4F;
   font-size: 15px;
   margin-bottom: 10px;
 }
 
-.course-rating{
+.course-rating {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.rating{
+.rating {
   font-size: 15px;
 }
 
-.filled{
+.filled {
   color: #FFC014;
 }
 
-.empty{
+.empty {
   color: #AEAEAE;
 }
 
-.duration{
+.duration {
   padding: 5px;
   font-size: 15px;
   color: #FF4A60;
