--- a/style.css
+++ b/style.css
@@ -239,6 +239,23 @@ article {
     grid-template-columns: repeat(1, 1fr);
   }
 
+  article{
+   display: flex;
+   flex-direction: column;
+  }
+
+  .blog-img img{
+    width: 100%;
+    height: 100%;
+  }
+
+  .blog-text{
+    height: 100%;
+    width: 100%;
+    margin-top: 20px;
+    margin-left: 0;
+  }
+
  .bottom{
     width: 100%;
     height: 100%;
@@ -247,6 +264,63 @@ article {
   .course-cards {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .course-card {
+    width: 100%;
+    height: 100%;
+  }
+
+  .course-img img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width:577px) and (max-width:768px){
+
+  .navigation a{
+    margin: 0 5vw;
+  }
+
+  .top{
+    width: 100%;
+    height: 100%;
+  }
+
+  .top-blog {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  article{
+    display: flex;
+    align-items: center;
+  }
+
+  .blog-img{
+    width: 50%;
+  }
+
+  .blog-img img{
+    width: 100%;
+    height: 100%;
+  }
+
+  .blog-text{
+    width: 50%;
+    margin-left: 50px;
+  }
+
+ .bottom{
+    width: 100%;
+    height: 100%;
+  }
+
+  .course-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .course-card {
