--- a/style.css
+++ b/style.css
@@ -333,3 +333,58 @@ article {
     height: 100%;
   }
 }
+
+@media screen and (min-width:769px) and (max-width:992px) {
+  .navigation a{
+    margin: 0 5vw;
+  }
+
+  .top{
+    width: 100%;
+    height: 100%;
+  }
+
+  .top-blog {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  article{
+    display: flex;
+    align-items: center;
+  }
+
+  .blog-img{
+    width: 50%;
+  }
+
+  .blog-img img{
+    width: 100%;
+    height: 100%;
+  }
+
+  .blog-text{
+    width: 50%;
+    margin-left: 50px;
+  }
+
+ .bottom{
+    width: 100%;
+    height: 100%;
+  }
+
+  .course-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .course-card {
+    width: 100%;
+    height: 100%;
+  }
+
+  .course-img img {
+    width: 100%;
+    height: 100%;
+  }
+}
